--- a/bench/jsonparse.html
+++ b/bench/jsonparse.html
@@ -1,4 +1,9 @@
 <script type="module">
+  /**
+   * @license
+   * Copyright Google LLC
+   * SPDX-License-Identifier: BSD-3-Clause
+   */
   import * as bench from "/bench.js";
   import { smallJsonString } from "./data.js";
   bench.start();
