--- a/bench/jsonriver.html
+++ b/bench/jsonriver.html
@@ -4,9 +4,9 @@
    * Copyright Google LLC
    * SPDX-License-Identifier: BSD-3-Clause
    */
-  import * as bench from "/bench.js";
-  import { smallJsonString } from "./data.js";
-  import { parse } from "./bundles/bundle.min.js";
+  import * as bench from '/bench.js';
+  import {smallJsonString} from './data.js';
+  import {parse} from './bundles/bundle.min.js';
   async function* toStream(str) {
     yield str;
   }
