--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<meta charset="utf-8" />
+<title>jsonriver - a streaming JSON parser</title>
 <style>
   body {
     font-family: sans-serif;
