--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 <h1>jsonriver</h1>
 
 <p>
-  jsonriver is a simple JS library that will parse JSON incrementally as it
-  streams in, e.g. from a network request or a language model. It gives you a
-  sequence of increasingly complete values.
+  <a href="https://github.com/rictic/jsonriver">jsonriver</a> is a simple JS
+  library that will parse JSON incrementally as it streams in, e.g. from a
+  network request or a language model. It gives you a sequence of increasingly
+  complete values.
 </p>
 
 <p>
