--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 <p>
   jsonriver is small (~2.5KiB gzipped), fast, has no dependencies, and uses only
-  standard features so it works without polyfills or special bundle
-  configuration anywhere that supports ES2022, including here in your browser.
+  standard features so it works without polyfills or bundling anywhere that
+  supports modern JavaScript, including here in your browser.
 </p>
 
 <p>
