--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   button {
     font-size: larger;
   }
+  .incomplete {
+    opacity: 0.5;
+  }
 </style>
 <h1>jsonriver</h1>
 
@@ -69,6 +72,18 @@
   const fetchOutput = document.querySelector('#fetch-output');
   const stopButton = document.querySelector('#stop');
   let abortController = new AbortController();
+  const completed = new WeakMap();
+  function markCompleted(value) {
+    if (value && typeof value === 'object') {
+      completed.set(value, true);
+    }
+  }
+  function isComplete(value) {
+    if (value && typeof value === 'object') {
+      return completed.has(value);
+    }
+  }
+
   fetchButton.addEventListener('click', async () => {
     abortController.abort('Restarted');
     abortController = new AbortController();
@@ -77,7 +92,7 @@
     const response = await fetch(`https://jsonplaceholder.typicode.com/posts`);
     const decoded = response.body.pipeThrough(new TextDecoderStream());
     const delayed = delay(decoded, 3); // adds fake latency, to simulate a slow network
-    const postsStream = parse(delayed);
+    const postsStream = parse(delayed, {completeCallback: markCompleted});
 
     for await (const posts of postsStream) {
       signal.throwIfAborted();
@@ -86,8 +101,10 @@
           <h3>Posts</h3>
           ${posts.map(
             (post, i) =>
-              html`<h4>${i + 1}. ${post.title}</h4>
-                <p>${post.body}</p>`,
+              html`<div class=${isComplete(post) ? 'complete' : 'incomplete'}>
+                <h4>${i + 1}. ${post.title}</h4>
+                <p>${post.body}</p>
+              </div>`,
           )}
         `,
         fetchOutput,
@@ -134,7 +151,7 @@
 <div id="llm-output"></div>
 
 <script type="module">
-  import {makeLlmRequest} from './llm.js';
+  import {makeLlmRequest, isComplete} from './llm.js';
   import {html, render} from './lit.js';
   const input = document.querySelector('#llm-input');
   const askButton = document.querySelector('#ask');
@@ -157,8 +174,10 @@
             <h3>Response</h3>
             ${response.map(
               (r) =>
-                html`<h4>${r.heading}</h4>
-                  <p>${r.body}</p>`,
+                html`<div class=${isComplete(r) ? 'complete' : 'incomplete'}>
+                  <h4>${r.heading}</h4>
+                  <p>${r.body}</p>
+                </div>`,
             )}
           `,
           llmOutput,
@@ -176,7 +195,9 @@
           <p>${e.message}</p>
           <p>
             Sometimes, if a question touches on sensitive subjects, the model
-            won't return JSON. It's silly, but it happens.
+            won't return JSON. It's silly, but it happens. Or maybe my key got
+            drained of the couple of bucks I put into it. So it goes with a
+            public demo on the web :)
           </p>
         `,
         llmOutput,
